media/proton-privoxy/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: proton-privoxy
  namespace: media
  annotations:
    flux.weave.works/automated: 'false'
spec:
  serviceName: proton-privoxy
  replicas: 1
  selector:
    matchLabels:
      app: proton-privoxy
  template:
    metadata:
      labels:
        app: proton-privoxy
    spec:
      containers:
      - name: proton-privoxy
        image: walt3rl/proton-privoxy:latest
        ports:
        - containerPort: 8080
          name: privoxy
        securityContext:
          privileged: true
          capabilities:
            add:
              - NET_ADMIN
        # image: alpine
        # command: ["sleep"]
        # args: ["10000000"]
