media/proton-privoxy/00networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: proton-privoxy
  namespace: media
spec:
  podSelector:
    matchLabels:
      app: proton-privoxy
  ingress:
  - ports:
    - port: 8080
    from: []
